--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@ function submit(){
 					</div>
 					<div class="4u">
 						<article class="item">
-							<a href="https://dl.dropboxusercontent.com/u/8937679/metamorphosis.pdf" target="blank" class="image full">
-							<img src="images/bug.jpg" height="200px" alt="" />
+							<a href="https://dl.dropboxusercontent.com/u/8937679/CFCPR.pdf" target="blank" class="image full">
+							<img src="images/pr-skyline.jpg" height="200px" alt="" />
 							<header>
-								<h3>The Metamorphosis</h3>
+								<h3>Press Releases</h3>
 							</header>
 						</article> 	
 						<article class="item">
