--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ function submit(){
 					</div>					
 					<div class="4u">
 						<article class="item">
-							<a href="https://hackaday.io/project/4344-pocket-synth" target="blank" class="image full">
+							<a href="https://hackaday.io/project/4344-pocket-synth" target="blank" class="image full"></a>
 							<img src="images/pocket-synth.jpg" height="300px" alt="pocket-synth.jpg" />
 							<header>
 								<h3>Pocket Synth</h3>
