fixed project article a tag for real

--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@ function submit(){
 					</div>					
 					<div class="4u">
 						<article class="item">
-							<a href="https://hackaday.io/project/4344-pocket-synth" target="blank" class="image full"></a>
-							<img src="images/pocket-synth.jpg" height="300px" alt="pocket-synth.jpg" />
+							<a href="https://hackaday.io/project/4344-pocket-synth" target="blank" class="image full">
+							<img src="images/pocket-synth.jpg" height="300px" alt="pocket-synth.jpg" /></a>
 							<header>
 								<h3>Pocket Synth</h3>
 							</header>
