--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ function submit(){
 		<section id="top" class="one">
 			<div class="container">
 
-				<img src="images/typewriter_main.jpg" height="300px" alt="" />
+				<img src="images/typewriter_main.jpg" height="300px" alt="" /></a> 
 
 				<header>
 					<h2 class="alt">I am an experienced writer with<br />
@@ -138,7 +138,7 @@ function submit(){
 					<h2>About Me</h2>
 				</header>
 
-				<img src="images/sunsetbird.jpg" height="400px" alt="" />
+				<img src="images/sunsetbird.jpg" height="400px" alt="" /></a>
 				
 				<p>Coming soon.
 <!-- 				
@@ -197,7 +197,7 @@ function submit(){
 					<div class="4u">
 						<article class="item">
 							<a href="https://dl.dropboxusercontent.com/u/8937679/CFCPR.pdf" target="blank" class="image full">
-							<img src="images/pr-skyline.jpg" height="200px" alt="" />
+							<img src="images/pr-skyline.jpg" height="200px" alt="" /></a>
 							<header>
 								<h3>Press Releases</h3>
 							</header>
