project images fixed

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ function submit(){
 				<div class="row">
 					<div class="4u">
 						<article class="item">
-							<a href="https://hackaday.io/project/5104-doublemint" class="image full" target="blank"><img src="images/doublemint.jpg" height="300px" alt="doublemint.jpg" /></a>
+							<a href="https://hackaday.io/project/5104-doublemint" class="image full" target="blank"><img src="images/doublemint.jpg" width="300px" alt="doublemint.jpg" /></a>
 							<header>
 								<h3><strong>Doublemint</strong></h3>
 							</header>
@@ -256,7 +256,7 @@ function submit(){
 					</div>
 					<div class="4u">
 						<article class="item">
-							<a href="https://hackaday.io/project/4494-fruit-cake" target="blank" class="image full"><img src="images/fruit-cake.jpg" height="300px" alt="fruit-cake.jpg" /></a>
+							<a href="https://hackaday.io/project/4494-fruit-cake" target="blank" class="image full"><img src="images/fruit-cake.jpg" width="300px" alt="fruit-cake.jpg" /></a>
 							<header>
 								<h3>Fruit Cake</h3>
 							</header>
@@ -265,7 +265,7 @@ function submit(){
 					<div class="4u">
 						<article class="item">
 							<a href="https://hackaday.io/project/4344-pocket-synth" target="blank" class="image full">
-							<img src="images/pocket-synth.jpg" height="300px" alt="pocket-synth.jpg" /></a>
+							<img src="images/pocket-synth.jpg" width="300px" alt="pocket-synth.jpg" /></a>
 							<header>
 								<h3>Pocket Synth</h3>
 							</header>
