--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ function submit(){
 				</header>
 				
 				<div>
-				Coming soon.
+				<a href="blog/test-post.md.html" class="button scrolly">Read Newest Post</a>
 				</div>
 		</section>
 		
