updated contact verbiage

--- a/index.html
+++ b/index.html
@@ -312,7 +312,8 @@ function submit(){
 					<h2>Contact</h2>
 				</header>
 
-				<p>Interested in hiring me? Here is my <a href="feeschedule.pdf" target="blank">fee schedule</a> for different projects and hourly occupations.
+				<p>Drop me a line about my writing or projects. Tell me your favorite bands and how you like your coffee.
+				<p>Need an updated landing page for your website? A fresh resume? A series of blog posts? Here is my <a href="feeschedule.pdf" target="blank">fee schedule</a>.
 				
 	<!--			<p>No matter what kind of writing you're looking for, you need clear and concise copy that engages and informs your reader.</br>
 					  
