republishing test blog post

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ function submit(){
 				</header>
 				
 				<div>
-				<a href="blog/blog-post-1.md.html" class="button scrolly">Read Latest Post</a>
+				<a href="blog/test-post.md.html" class="button scrolly">Read Latest Post</a>
 				</div>
 		</section>
 		
