--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ function submit(){
 			<nav id="nav">
 				<ul>
 					<li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Home</span></a></li>
-					<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">About Me</span></a></li>
+					<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">About</span></a></li>
 					<li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-pencil">Writing</span></a></li>
 					<li><a href="#projects" id="projects-link" class="skel-panels-ignoreHref"><span class="fa fa-wrench">Projects</span></a></li>
 					<li><a href="#blog" id="blog-link" class="skel-panels-ignoreHref"><span class="fa fa-bullhorn">Blog</span></a></li>
@@ -124,7 +124,7 @@ function submit(){
 						<!--	<p>When I'm not writing, I like to create things out of whatever I have on hand.</p> -->
 
 				<footer>
-					<a href="#contact" class="button scrolly">Hire Me</a>
+					<a href="#contact" class="button scrolly">Hire Kristina</a>
 				</footer>
 
 			</div>
@@ -135,7 +135,7 @@ function submit(){
 			<div class="container">
 
 				<header>
-					<h2>About Me</h2>
+					<h2>About</h2>
 				</header>
 
 				<img src="images/sunsetbird.jpg" height="400px" alt="" /></a>
@@ -231,7 +231,7 @@ function submit(){
 			</div>
 			
 				<footer>
-					<a href="#contact" class="button scrolly">Hire Me</a>
+					<a href="#contact" class="button scrolly">Hire Kristina</a>
 				</footer>
 				
 		</section>
