--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ function submit(){
 					</div>
 	
 					
-					<div class="4u">
+<!-- 					<div class="4u">
 						<article class="item">
 							<a href="https://hackaday.io/project/591-anti-sedent-alarm-or-get-up-stand-up" target="blank" class="image full"><img src="images/typography.jpg" height="200px" alt="" /></a>
 							<header>
@@ -273,10 +273,10 @@ function submit(){
 								<h3>Wrist Alarm</h3>
 							</header>
 						</article>						  
-					</div>
+					</div> -->
 									<div class="4u">
 						<article class="item">
-							<a href="https://hackaday.io/project/11804-tennis-ball-picker-upper" target="blank" class="image full"><img src="images/tennis.jpg" height="200px" alt="" /></a>
+							<a href="https://hackaday.io/project/11804-tennis-ball-picker-upper" target="blank" class="image full"><img src="images/tennis.JPG" height="200px" alt="" /></a>
 							<header>
 								<h3>Tennis Ball Collector</h3>
 							</header>
