--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ function submit(){
 
 		<!-- Social Icons -->
 			<ul class="icons">
+				<li><a href="https://instagram.com/cornbread_ninja" class="fa fa-instagram" target="blank"><span></span></a></li>
 				<li><a href="https://twitter.com/kristinapanos" class="fa fa-twitter solo" target="blank"><span>Twitter</span></a></li>
 				<li><a href="http://english.stackexchange.com/users/18399/cornbread-ninja" class="fa fa-stack-exchange" target="blank"><span></span></a></li>
 				<li><a href="http://www.linkedin.com/in/kristinapanos" class="fa fa-linkedin" target="blank"><span></span></a></li>
@@ -368,7 +369,7 @@ function submit(){
 	
 	<!-- Copyright -->
 		<div class="copyright">
-			<p>&copy; 2013-16 Kristina Panos. All rights reserved.</p>
+			<p>&copy; 2013-17 Kristina Panos. All rights reserved.</p>
 			<ul class="menu">
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				<!-- <li>Images: <a href="http://ineedchemicalx.deviantart.com">Felicia Simion</a></li> -->
