link to youtube button

--- a/index.html
+++ b/index.html
@@ -284,8 +284,9 @@ function submit(){
 				</header>
 
 			<!-- 	<img src="images/sunsetbird.jpg" height="400px" alt="" /></a> -->
-				<p>Videos are coming very soon. 
+				<p>New videos are coming very soon.</p> 
 
+				<a href="https://www.youtube.com/channel/UCiaofrrXV4FZ7j-wtr5g-pA" class="button scrolly">YouTube channel</a>
 					
 
 
