--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ function submit(){
 					<li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Home</span></a></li>
 					<li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-pencil">Writing</span></a></li>
 					<li><a href="#projects" id="projects-link" class="skel-panels-ignoreHref"><span class="fa fa-wrench">Projects</span></a></li>
-					<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-video-camera">Videos</span></a></li>
+					<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-film">Videos</span></a></li>
 					<li><a href="#blog" id="blog-link" class="skel-panels-ignoreHref"><span class="fa fa-bullhorn">Blog</span></a></li>
 					<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>
 					<!--<li><a href="#blog" id="blog-link" class="skel-panels-ignoreHref"><span class="fa fa-pencil">Blog</span></a></li>-->
