test pdf hosting

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ function submit(){
 					</div>
 					<div class="4u">
 						<article class="item">
-							<a href="https://dl.dropboxusercontent.com/u/8937679/CFCPR.pdf" target="blank" class="image full">
+							<a href="files/CFCPR.pdf" target="blank" class="image full">
 							<img src="images/pr-skyline.jpg" height="200px" alt="" /></a>
 							<header>
 								<h3>Press Releases</h3>
