host remaining pdfs

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ function submit(){
 							</header>
 						</article>
 						<article class="item">
-							<a href="https://dl.dropboxusercontent.com/u/8937679/JBattle.pdf" target="blank" class="image full"><img src="images/jbattle.jpg" height="200px" alt="" /></a>
+							<a href="files/JBattle.pdf" target="blank" class="image full"><img src="images/jbattle.jpg" height="200px" alt="" /></a>
 							<header>
 								<h3>JBattle Java Game</h3>
 							</header>
@@ -173,7 +173,7 @@ function submit(){
 							</header>
 						</article> 	
 						<article class="item">
-							<a href="https://dl.dropboxusercontent.com/u/8937679/Portfolio%20One%20Sheet.pdf" target="blank" class="image full"><img src="images/viewerview.jpg" height="200px" alt="" /></a>
+							<a href="files/Portfolio-One-Sheet.pdf" target="blank" class="image full"><img src="images/viewerview.jpg" height="200px" alt="" /></a>
 							<header>
 								<h3>Sales Letters</h3>
 							</header>
@@ -181,14 +181,14 @@ function submit(){
 					</div>
 					<div class="4u">
 						<article class="item">
-							<a href="https://dl.dropboxusercontent.com/u/8937679/Typography%20blog%20post%20for%20ELU.pdf" target="blank" class="image full"><img src="images/typography.jpg" height="200px" alt="" /></a>
+							<a href="files/ELU.pdf" target="blank" class="image full"><img src="images/typography.jpg" height="200px" alt="" /></a>
 							<header>
 								<h3>On Typography</h3>
 							</header>
 						</article>						
 		
 						<article class="item">
-							<a href="https://dl.dropboxusercontent.com/u/8937679/Wax%20Nostalgic/Wax%20Nostalgic%20-%20Brand%20Proposal.pdf" target="blank" class="image full"><img src="images/papercoffeecropped.jpg" height="200px" alt="" /></a>
+							<a href="files/Wax-Nostalgic.pdf" target="blank" class="image full"><img src="images/papercoffeecropped.jpg" height="200px" alt="" /></a>
 							<header>
 								<h3>Brand Proposals</h3>
 							</header>
