salty crews brochure

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@ function submit(){
 							</header>
 						</article> 	
 						<article class="item">
-							<a href="files/Portfolio-One-Sheet.pdf" target="blank" class="image full"><img src="images/viewerview.jpg" height="200px" alt="" /></a>
+							<a href="files/salty-crews-brochure.pdf" target="blank" class="image full"><img src="images/viewerview.jpg" height="200px" alt="" /></a>
 							<header>
-								<h3>Sales Letters</h3>
+								<h3>Brochures</h3>
 							</header>
 						</article>						
 					</div>
