--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/font-awesome.min.css" />
 		</noscript>
+		<link rel="stylesheet" href="css/font-awesome.min.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
 		
@@ -77,7 +79,8 @@ function submit(){
 				<ul>
 					<li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Home</span></a></li>
 					<li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-pencil">Writing</span></a></li>
-					<li><a href="#projects" id="projects-link" class="skel-panels-ignoreHref"><span class="fa fa-wrench">Projects</span></a></li>
+					<li><a href="#noiseboxen" id="projects-link" class="skel-panels-ignoreHref"><span class="fa fa-music">Noise Boxes</span></a></li>
+					<li><a href="#miniatures" id="projects-link" class="skel-panels-ignoreHref"><span class="fa fa-paint-brush">Miniatures</span></a></li>
 					<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-film">Videos</span></a></li>
 					<li><a href="#blog" id="blog-link" class="skel-panels-ignoreHref"><span class="fa fa-bullhorn">Blog</span></a></li>
 					<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>
@@ -211,7 +214,7 @@ function submit(){
 			<div class="container">
 		
 				<header>
-					<h2>Projects</h2>
+					<h2>Noise Boxes</h2>
 				</header>
 				
 		
@@ -260,14 +263,14 @@ function submit(){
 							</header>
 						</article>						  
 					</div> -->
-									<div class="4u">
+									<!-- <div class="4u">
 						<article class="item">
 							<a href="https://hackaday.io/project/11804-tennis-ball-picker-upper" target="blank" class="image full"><img src="images/tennis.JPG" height="200px" alt="" /></a>
 							<header>
 								<h3>Tennis Ball Collector</h3>
 							</header>
 						</article>						  
-					</div>				
+					</div>				 -->
 
 			</div>
 				<footer>
@@ -275,6 +278,37 @@ function submit(){
 				</footer>
 		</section>
 
+		<!-- Miniatures -->
+		<section id="about" class="two">
+			<div class="container">
+
+				<header>
+					<h2>Miniatures</h2>
+				</header>
+<div class="row">				
+
+<div class="4u">
+	<article class="item">
+	<a href="zgallery.html" target="blank" class="image full"><img src="images/zs.JPG" height="200px" alt="" /></a>
+		<header>
+		<h3>Mr. Z's In & Out</h3>
+		</header>
+    </article>						  
+</div>
+
+<div class="4u">
+	<article class="item">
+	<a href="sidewalkgallery.html" target="blank" class="image full"><img src="images/sidewalkmain.jpg" height="200px" alt="" /></a>
+		<header>
+		<h3>Sidewalk</h3>
+		</header>
+    </article>						  
+</div>
+</div>
+			</div>
+
+			</section>		
+		
 	<!-- Videos -->
 		<section id="about" class="two">
 			<div class="container">
