--- a/zgallery.html
+++ b/zgallery.html
@@ -17,8 +17,8 @@
 		<script src="js/skel-panels.min.js"></script>
 		<script src="js/init.js"></script>
 		<!-- fotorama.css & fotorama.js. -->
-		<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+		<link  href="css/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+		<script src="js/fotorama.js"></script> <!-- 16 KB -->
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
