fix zs thumb file extension

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ function submit(){
 
 <div class="4u">
 	<article class="item">
-	<a href="zgallery.html" target="blank" class="image full"><img src="images/zs.JPG" height="200px" alt="" /></a>
+	<a href="zgallery.html" target="blank" class="image full"><img src="images/zs.jpg" height="200px" alt="" /></a>
 		<header>
 		<h3>Mr. Z's In & Out</h3>
 		</header>
