--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ function submit(){
 				<ul>
 					<li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Home</span></a></li>
 					<li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-pencil">Writing</span></a></li>
-					<li><a href="#noiseboxen" id="projects-link" class="skel-panels-ignoreHref"><span class="fa fa-music">Noise Boxes</span></a></li>
-					<li><a href="#miniatures" id="projects-link" class="skel-panels-ignoreHref"><span class="fa fa-paint-brush">Miniatures</span></a></li>
+					<li><a href="#noise-boxes" id="noise-boxes-link" class="skel-panels-ignoreHref"><span class="fa fa-music">Noise Boxes</span></a></li>
+					<li><a href="#miniatures" id="miniatures-link" class="skel-panels-ignoreHref"><span class="fa fa-paint-brush">Miniatures</span></a></li>
 					<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-film">Videos</span></a></li>
 					<li><a href="#blog" id="blog-link" class="skel-panels-ignoreHref"><span class="fa fa-bullhorn">Blog</span></a></li>
 					<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>
@@ -210,7 +210,7 @@ function submit(){
 		</section>
 
 			<!-- Projects -->
-		<section id="projects" class="three">
+		<section id="noise-boxes" class="three">
 			<div class="container">
 		
 				<header>
@@ -279,7 +279,7 @@ function submit(){
 		</section>
 
 		<!-- Miniatures -->
-		<section id="about" class="two">
+		<section id="miniatures" class="two">
 			<div class="container">
 
 				<header>
@@ -318,7 +318,7 @@ function submit(){
 				</header>
 
 			<!-- 	<img src="images/sunsetbird.jpg" height="400px" alt="" /></a> -->
-				<p>New videos are coming very soon.</p> 
+				<p>New videos are coming soon.</p> 
 
 				<a href="https://www.youtube.com/channel/UCiaofrrXV4FZ7j-wtr5g-pA" class="button scrolly">YouTube channel</a>
 					
