--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ function submit(){
 					<li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-pencil">Writing</span></a></li>
 					<li><a href="#noise-boxes" id="noise-boxes-link" class="skel-panels-ignoreHref"><span class="fa fa-music">Noise Boxes</span></a></li>
 					<li><a href="#microsculpture" id="microsculpture-link" class="skel-panels-ignoreHref"><span class="fa fa-paint-brush">Microsculpture</span></a></li>
-<!-- 					<li><a href="#macrosculpture" id="macrosculpture-link" class="skel-panels-ignoreHref"><span class="fa fa-paint-brush">Macrosculpture</span></a></li> -->
-					<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-film">Videos</span></a></li>
+					<li><a href="#macrosculpture" id="macrosculpture-link" class="skel-panels-ignoreHref"><span class="fa fa-paint-brush">Macrosculpture</span></a></li>
+					<li><a href="#videos" id="videos-link" class="skel-panels-ignoreHref"><span class="fa fa-film">Videos</span></a></li>
 					<li><a href="#blog" id="blog-link" class="skel-panels-ignoreHref"><span class="fa fa-bullhorn">Blog</span></a></li>
 					<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>
 					<!--<li><a href="#blog" id="blog-link" class="skel-panels-ignoreHref"><span class="fa fa-pencil">Blog</span></a></li>-->
@@ -314,7 +314,7 @@ function submit(){
 			</section>		
 
 		<!-- Macrosculpture -->
-<!-- 		<section id="macrosculpture" class="two">
+		<section id="macrosculpture" class="two">
 			<div class="container">
 
 				<header>
@@ -324,7 +324,7 @@ function submit(){
 
 <div class="4u">
 	<article class="item">
-	<a href="cone.html" target="blank" class="image full"><img src="images/cone.jpg" height="200px" alt="" /></a>
+	<a href="cone1.jpg" target="blank" class="image full"><img src="images/cone1.jpg" height="500px" alt="" /></a>
 		<header>
 		<h3>We All Scream</h3>
 		</header>
@@ -336,10 +336,10 @@ function submit(){
 			</div>
 
 			</section>					
- -->	
+	
  
  <!-- Videos -->
-		<section id="about" class="two">
+		<section id="videos" class="two">
 			<div class="container">
 
 				<header>
