commented out Blog section

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ function submit(){
 		</section>		
 		
 <!-- Blog -->
-		<section id="blog" class="three">
+		<!-- <section id="blog" class="three">
 			<div class="container">
 		
 				<header>
@@ -377,11 +377,11 @@ function submit(){
 				</header>
 				
 				<div>
-				Coming soon, in some form or another. Maybe. 
+				Coming soon, in some form or another. Maybe. --> 
 								
 <!-- 				<a href="blog/blog-post-1.md.html" class="button scrolly">Read Latest Post</a>
- -->				</div>
-		</section>
+ -->			<!-- 	</div>
+		</section> -->
 		
 	<!-- Contact -->
 		<section id="contact" class="four">
