tried to add Twitch icon to bottom

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ function submit(){
 
 		<!-- Social Icons -->
 			<ul class="icons">
+				<li><a href="https://twitch.tv/cornbread_ninja" class="fa fa-twitch" target="blank"><span></span></a></li>
 				<li><a href="https://instagram.com/cornbread_ninja" class="fa fa-instagram" target="blank"><span></span></a></li>
 				<li><a href="https://twitter.com/kristinapanos" class="fa fa-twitter solo" target="blank"><span>Twitter</span></a></li>
 				<li><a href="http://www.linkedin.com/in/kristinapanos" class="fa fa-linkedin" target="blank"><span></span></a></li>
@@ -358,7 +359,7 @@ function submit(){
 				</header>
 
 			<!-- 	<img src="images/sunsetbird.jpg" height="400px" alt="" /></a> -->
-				<p>New videos are coming soon.</p> 
+				<p>Sewing videos are coming soon. I'll be broadcasting my bagmaking live on Twitch. </p> 
 
 				<a href="https://www.youtube.com/channel/UCiaofrrXV4FZ7j-wtr5g-pA" class="button scrolly">YouTube channel</a>
 					
