tried to add Twitch channel button to Videos section

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ function submit(){
 				<p>Sewing videos are coming soon. I'll be broadcasting my bagmaking live on Twitch. </p> 
 
 				<a href="https://www.youtube.com/channel/UCiaofrrXV4FZ7j-wtr5g-pA" class="button scrolly">YouTube channel</a>
-					
+				<a href="https://twitch.tv/cornbread_ninja" class="button scrolly">Twitch channel</a>	
 
 
 			</div>
