updated name of for sale section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ function submit(){
 					<li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Home</span></a></li>
 					<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-folder-open">About</span></a></li>
 					<li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-pencil">Writing</span></a></li>
-					<li><a href="#forsale" id="forsale-link" class="skel-panels-ignoreHref"><span class="fa fa-shopping-bag">For Sale</span></a></li>
+					<li><a href="#forsale" id="forsale-link" class="skel-panels-ignoreHref"><span class="fa fa-shopping-bag">Handmade Bags For Sale</span></a></li>
 					<li><a href="#noise-boxes" id="noise-boxes-link" class="skel-panels-ignoreHref"><span class="fa fa-music">Noise Boxes</span></a></li>
 					<li><a href="#microsculpture" id="microsculpture-link" class="skel-panels-ignoreHref"><span class="fa fa-paint-brush">Microsculpture</span></a></li>
 					<li><a href="#macrosculpture" id="macrosculpture-link" class="skel-panels-ignoreHref"><span class="fa fa-paint-brush">Macrosculpture</span></a></li>
@@ -231,7 +231,7 @@ function submit(){
 			<div class="container">
 		
 				<header>
-					<h2>For Sale</h2>
+					<h2>Handmade Bags For Sale</h2>
 				</header>
 				
 		
