pushed green-vicky picture

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ function submit(){
 					<div class="4u">
 						<article class="item">
 							<a href="https://hackaday.io/project/4344-pocket-synth" target="blank" class="image full">
-							<img src="images/pocket-synth.jpg" width="300px" alt="pocket-synth.jpg" /></a>
+							<img src="images/green-vicky.jpg" width="300px" alt="green-vicky.jpg" /></a>
 							<header>
 								<h3>Green Vicky Backpack</h3>
 							</header>
