--- a/index.html
+++ b/index.html
@@ -238,15 +238,15 @@ function submit(){
 				<div class="row">
 					<div class="4u">
 						<article class="item">
-							<a href="https://hackaday.io/project/5104-doublemint" class="image full" target="blank"><img src="images/doublemint.jpg" width="300px" alt="doublemint.jpg" /></a>
+							<a href="https://www.etsy.com/shop/cornbreadNinja" class="image full" target="blank"><img src="images/birds-hobo.jpg" width="300px" alt="birds-hobo.jpg" /></a>
 							<header>
-								<h3><strong>Doublemint</strong></h3>
+								<h3><strong>Reversible Birds Hobo</strong></h3>
 							</header>
 						</article>						
 					</div>
 					<div class="4u">
 						<article class="item">
-							<a href="https://hackaday.io/project/4494-fruit-cake" target="blank" class="image full"><img src="images/fruit-cake.jpg" width="300px" alt="fruit-cake.jpg" /></a>
+							<a href="https://www.etsy.com/shop/cornbreadNinja" target="blank" class="image full"><img src="images/southwestern-backpack.jpg" width="300px" alt="southwestern-backpack.jpg" /></a>
 							<header>
 								<h3>Southwestern Backpack</h3>
 							</header>
@@ -254,7 +254,7 @@ function submit(){
 					</div>					
 					<div class="4u">
 						<article class="item">
-							<a href="https://hackaday.io/project/4344-pocket-synth" target="blank" class="image full">
+							<a href="https://www.etsy.com/shop/cornbreadNinja" target="blank" class="image full">
 							<img src="images/green-vicky.jpg" width="300px" alt="green-vicky.jpg" /></a>
 							<header>
 								<h3>Green Vicky Backpack</h3>
