update to bag gallery header

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ function submit(){
 				<div class="row">
 					<div class="4u">
 						<article class="item">
-							<a href="https://www.etsy.com/shop/cornbreadNinja" class="image full" target="blank"><img src="images/birds-hobo.jpg" width="300px" alt="birds-hobo.jpg" /></a>
+							<a href="https://www.etsy.com/shop/cornbreadNinja" class="image full" target="blank"><img src="images/coming-soon.jpg" width="300px" alt="coming-soon.jpg" /></a>
 							<header>
 								<h3><strong>Reversible Birds Hobo</strong></h3>
 							</header>
@@ -246,7 +246,7 @@ function submit(){
 					</div>
 					<div class="4u">
 						<article class="item">
-							<a href="https://www.etsy.com/shop/cornbreadNinja" target="blank" class="image full"><img src="images/southwestern-backpack.jpg" width="300px" alt="southwestern-backpack.jpg" /></a>
+							<a href="https://www.etsy.com/shop/cornbreadNinja" target="blank" class="image full"><img src="images/coming-soon.jpg" width="300px" alt="coming-soon.jpg" /></a>
 							<header>
 								<h3>Southwestern Backpack</h3>
 							</header>
@@ -255,7 +255,7 @@ function submit(){
 					<div class="4u">
 						<article class="item">
 							<a href="https://www.etsy.com/shop/cornbreadNinja" target="blank" class="image full">
-							<img src="images/green-vicky.jpg" width="300px" alt="green-vicky.jpg" /></a>
+							<img src="images/coming-soon.jpg" width="300px" alt="coming-soon.jpg" /></a>
 							<header>
 								<h3>Green Vicky Backpack</h3>
 							</header>
