added another ice cream cone picture

--- a/index.html
+++ b/index.html
@@ -388,6 +388,11 @@ function submit(){
     </article>						  
 </div>
 
+<div class="4u">
+	<article class="item">
+	<a href="cone.jpg" target="blank" class="image full"><img src="images/cone.jpg" height="500px" alt="" /></a>
+    </article>						  
+</div>
 
 </div>
 			</div>
