--- a/index.html
+++ b/index.html
@@ -390,7 +390,10 @@ function submit(){
 
 <div class="4u">
 	<article class="item">
-	<a href="cone.jpg" target="blank" class="image full"><img src="images/cone.jpg" height="500px" alt="" /></a>
+	<a href="cone.jpg" target="blank" class="image full"><img src="images/cone.jpg" height="250px" alt="" /></a>
+	<header>
+		<h3>We All Scream</h3>
+		</header>
     </article>						  
 </div>
 
