commenting out cone.jpg

--- a/index.html
+++ b/index.html
@@ -388,14 +388,14 @@ function submit(){
     </article>						  
 </div>
 
-<div class="4u">
+<!-- <div class="4u">
 	<article class="item">
 	<a href="cone.jpg" target="blank" class="image full"><img src="images/cone.jpg" height="375px" alt="" /></a>
 	<header>
 		<h3>We All Scream</h3>
 		</header>
     </article>						  
-</div>
+</div> -->
 
 </div>
 			</div>
