added green vicky backpack picture

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ function submit(){
 					<div class="4u">
 						<article class="item">
 							<a href="https://www.etsy.com/shop/cornbreadNinja" target="blank" class="image full">
-							<img src="images/coming-soon.jpg" width="300px" alt="coming-soon.jpg" /></a>
+							<img src="images/green-vicky-backpack-main.jpg" width="300px" alt="green-vicky-backpack-main.jpg" /></a>
 							<header>
 								<h3>Green Vicky Backpack</h3>
 							</header>
