--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ function submit(){
 			<div class="container">
 		
 				<header>
-					<h2>Handmade Bags For Sale -- Live listings coming soon</h2>
+					<h2>Handmade Bags and Backpacks for Sale</h2>
 				</header>
 				
 		
