saved index html

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@ function submit(){
 					</div>					
 					<div class="4u">
 						<article class="item">
-							<a href="https://www.etsy.com/shop/cornbreadNinja" target="blank" class="image full">
-							<img src="images/green-vicky-backpack-main.jpg" width="300px" alt="green-vicky-backpack-main.jpg" /></a>
+								<a href="greenvickybackpackgallery.html" target="blank" class="image full">
+							<img src="images/green-vicky-backpack-inner.jpg" width="300px" alt="green-vicky-backpack-inner.jpg" /></a>
 							<header>
 								<h3>Green Vicky Backpack</h3>
 							</header>
