changed gallery to dot html instead of dot html

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ function submit(){
 					</div>					
 					<div class="4u">
 						<article class="item">
-								<a href="greenvickybackpackgallery.html" target="blank" class="image full">
+								<a href="greenvickybackpackgallery.htm" target="blank" class="image full">
 							<img src="images/green-vicky-backpack-inner.jpg" width="300px" alt="green-vicky-backpack-inner.jpg" /></a>
 							<header>
 								<h3>Green Vicky Backpack</h3>
