changed green vicky clickthrough to the live listing on etsy

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ function submit(){
 					</div>					
 					<div class="4u">
 						<article class="item">
-								<a href="greenvickybackpackgallery.htm" target="blank" class="image full">
+								<a href="https://www.etsy.com/listing/1104485516/green-canvas-backpack" target="blank" class="image full">
 							<img src="images/green-vicky-backpack-main.jpg" width="300px" alt="green-vicky-backpack-main.jpg" /></a>
 							<header>
 								<h3>Green Vicky Backpack</h3>
