saving index file to hopefully see the green campers dayna now

--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@ function submit(){
 					</div>
 					<div class="4u">
 						<article class="item">
-							<a href="https://www.etsy.com/shop/cornbreadNinja" target="blank" class="image full"><img src="images/coming-soon.jpg" width="300px" alt="coming-soon.jpg" /></a>
+							<a href="https://www.etsy.com/listing/1105918634/campers-fanny-bag-with-adjustable-strap" target="blank" class="image full"><img src="images/campers-fanny-main.jpg" width="300px" alt="campers-fanny-main.jpg" /></a>
 							<header>
-								<h3>Southwestern Backpack</h3>
+								<h3>Gone Campin' Fanny Bag</h3>
 							</header>
 						</article>						  
 					</div>					
