adding Japanese knot bag etsy listing

--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@ function submit(){
 				<div class="row">
 					<div class="4u">
 						<article class="item">
-							<a href="https://www.etsy.com/shop/cornbreadNinja" class="image full" target="blank"><img src="images/coming-soon.jpg" width="300px" alt="coming-soon.jpg" /></a>
+							<a href="https://www.etsy.com/listing/1108518388/handmade-japanese-knot-bag" class="image full" target="blank"><img src="images/knot-bag-knotted.jpg" width="300px" alt="knot-bag-knotted.jpg" /></a>
 							<header>
-								<h3><strong>Reversible Birds Hobo</strong></h3>
+								<h3><strong>Japanese knot bag</strong></h3>
 							</header>
 						</article>						
 					</div>
